# tree-sitter-x12

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  Taskfile.yaml  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  release.yaml
.zed/: tasks.json
bindings/c/: tree-sitter-x12.h  tree-sitter-x12.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_x12/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterX12Tests/: TreeSitterX12Tests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: GS.txt  IEA.txt  INTERCHANGE_CONTROL.txt  ISA.txt  N1.txt  PO1.txt
