[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-x12"
description = "X12 EDI grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "x12"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kyle Huggins", email = "kyle@huggins.io" }]
requires-python = ">=3.9"
license.text = "bsd-3-clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/hugginsio/tree-sitter-x12"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
